--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.16.0",
     "eslint-plugin-vue": "^7.4.0",
-    "typescript": "^4.1.3",
-    "vite": "^1.0.0-rc.13",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "typescript": "^4.1.3",
+    "vite": "^1.0.0-rc.13"
   }
 }
