--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "vue": "^3.0.4",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "4.0.0-rc.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.16.0",
     "eslint-plugin-vue": "^7.4.0",
